--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<script src="https://kit.fontawesome.com/b93fc8c9e8.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="https://kit.fontawesome.com/b93fc8c9e8.js" crossorigin="anonymous"></script>
+     <link
+      href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@3.31.0/dist/tabler-icons.min.css"
+      rel="stylesheet"
+    />
     <script src="../js/utils.js"></script>
 
-   <link rel="stylesheet" href="../css/app.css">
-    <link rel="stylesheet" href="../css/titlebar.css">
-    <link rel="stylesheet" href="../css/tabs.css">
+    <link rel="stylesheet" href="../css/app.css" />
+    <link rel="stylesheet" href="../css/titlebar.css" />
+    <link rel="stylesheet" href="../css/tabs.css" />
+    <link rel="stylesheet" href="../css/panel.css" />
     <title></title>
-
   </head>
   <body>
-  <div id="app">
-    <div id="title-bar">
-      <!-- TITLEBAR HTML -->
-      <script>FETCH_HTML('./view/titlebar.html' , 'title-bar');</script>
-      <!-- TITLEBAR HTML -->
+    <div id="app">
+      <div id="title-bar">
+        <!-- TITLEBAR HTML -->
+        <script>
+          FETCH_HTML("./view/titlebar.html", "title-bar");
+        </script>
+        <!-- TITLEBAR HTML -->
+      </div>
+      <div id="app-container">
+        <!--   <webview id="webview" src="https://google.com" style="width: 100%; height: 100%;"></webview> -->
+      </div>
+    <div id="overlay" class="overlay">
+     <script>
+          FETCH_HTML("./view/panel.html", "overlay");
+        </script>
     </div>
-    <div id="app-container">
-    <!--   <webview id="webview" src="https://google.com" style="width: 100%; height: 100%;"></webview> -->
     </div>
-    </div>
-     <script src="../js/webbrowser.js"></script>
-      <script src="../js/tabs.js"></script>
-      <script src="../js/dialog.js"></script>
 
+    <script src="../js/webbrowser.js"></script>
+    <script src="../js/tabs.js"></script>
+    <script src="../js/panel.js"></script>
 
   </body>
-
 </html>
